--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
 
     <script type="text/x-handlebars" id="components/audio-player">
       <audio autoplay {{bindAttr src=src}}></audio>
+
+      {{#if isPlaying}}
+        <button class="pause" {{action 'pause'}}>❙❙</button>
+      {{else}}
+        <button class="play" {{action 'play'}}>▶</button>
+      {{/if}}
     </script>
 
     <div id="qunit" style="display: none"></div>
